Add PAR_NEW disabled analysis.